	  which can be passed as key in [purple] section in config file.
	* Spectrum is not showed as available when it's disabled in Ad-Hoc commands.
	* Don't send Roster Item Exchange to clients which don't answer disco#info
	  request.
	* Fixed bug in adding new buddies when buddy wasn't properly added to legacy
	  network contanct list in some cases.

	Twitter:
	* Added support for latest prpltwtr plugin (http://code.google.com/p/prpltwtr/).

	XMPP:
	* Room Jabber IDs don't start with "#" character. So proper JID to join our room
	  is now "spectrum%conference.spectrum.im@xmpp.domain.tld".

	ICQ/AIM:
	* Fixed connection issues on Windows.

	MSN:
	* Send proper features in disco#info (Fixes filetransfer problems in some Jabber
	  Clients).

	Gadu-Gadu:
	* Added support for receiving VCards.

	IRC:
	* Fixed bug when user stays connected to IRC even he is logged out from Jabber.
	* Fixed sending first private message from XMPP to IRC.

version 0.2 (2010-04-08):
	General:
	* Don't answer error IQ stanza on disco#info request.
	* Added Windows compilation support.
	* Send unavailable presences when shutting transport down.
	* Working filetransfer from XMPP to legacy network when legacy network user
	  can't receive file. File is then stored on server and the link to file is
	  sent. Web address and file storage directory can be set in config file.
	* Twitter protocol support (using http://code.google.com/p/prpltwtr/)
	* Added $filename:jid, $filename:protocol and $filename:port config variables
	  which are set according to config filename. It has to be named as
	  jid:protocol:port.cfg (for example icq.localhost:icq:5432.cfg).
	* Fixed crash when legacy network user cancels filetransfer.
	* Fixed crash when XMPP user cancels Adhoc command execution.
	* Fixed crash when two XMPP users try to use one legacy network account.
	* Don't send duplicate presences.
	* Don't forward typing notification without an existing conversation.