@@ -319,6 +319,9 @@ set(spectrum_tests_MOC_HDRS
 
 add_executable(spectrum_tests ${spectrum_tests_SRCS} ${lrelease_outputs})
 set_target_properties(spectrum_tests PROPERTIES COMPILE_FLAGS -DTESTS)
+set_target_properties(spectrum PROPERTIES COMPILE_FLAGS -O0)
+SET(CMAKE_CXX_FLAGS_DISTRIBUTION "-O0")
+SET(CMAKE_C_FLAGS_DISTRIBUTION "-O0")
 
 
 if(DEFINED WITH_STATIC_GLOOX)
